# system-monitoring-center

./: README.md  meson.build  test
.github/workflows/: publish-deb.yml
data/: io.github.hakandundar34coding.system-monitoring-center.appdata.xml.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  postinst  postrm  rules
docs/: translations.md
po/: LINGUAS  POTFILES  command_get_text.py  cs.po  system-monitoring-center.pot
src/: Common.py  Config.py  Cpu.py  CpuMenu.py  Disk.py  DiskMenu.py  Gpu.py  GpuMenu.py  Libsysmon.py  Main.py  MainWindow.py  Memory.py  MemoryMenu.py  Network.py  NetworkMenu.py  Performance.py  Processes.py  ProcessesDetails.py  ProcessesMenu.py  Sensors.py  SensorsMenu.py  Services.py  ServicesDetails.py  ServicesMenu.py  SettingsWindow.py  Summary.py  SummaryMenu.py  System.py  Users.py  UsersDetails.py  UsersMenu.py  meson.build  run_from_source.py  system-monitoring-center.in
